Load and check training data

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -27,19 +27,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Image Shape: (32, 32, 3)\n",
+      "\n",
+      "Training Set:   39209 samples\n",
+      "Test Set:       12630 samples\n"
+     ]
+    }
+   ],
    "source": [
     "# Load pickled data\n",
     "import pickle\n",
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "testing_file = ?\n",
+    "training_file = \"train.p\"\n",
+    "testing_file = \"test.p\"\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -47,7 +59,16 @@
     "    test = pickle.load(f)\n",
     "    \n",
     "X_train, y_train = train['features'], train['labels']\n",
-    "X_test, y_test = test['features'], test['labels']"
+    "X_test, y_test = test['features'], test['labels']\n",
+    "\n",
+    "assert(len(X_train) == len(y_train))\n",
+    "assert(len(X_test) == len(y_test))\n",
+    "\n",
+    "print()\n",
+    "print(\"Image Shape: {}\".format(X_train[0].shape))\n",
+    "print()\n",
+    "print(\"Training Set:   {} samples\".format(len(X_train)))\n",
+    "print(\"Test Set:       {} samples\".format(len(X_test)))"
    ]
   },
   {
@@ -448,7 +469,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
