add dropout. Validation Accuracy = 93%

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -400,21 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "EPOCHS = 10\n",
-    "BATCH_SIZE = 128"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -422,10 +408,10 @@
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed.\n",
-    "\n",
+    "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
-    "def LeNet(x):    \n",
+    "def LeNet(x, dropout):    \n",
     "    # Hyperparameters\n",
     "    mu = 0\n",
     "    sigma = 0.1\n",
@@ -438,12 +424,13 @@
     "        'layer_5': tf.Variable(tf.truncated_normal([84, n_classes], mean = mu, stddev = sigma))\n",
     "    }\n",
     "    \n",
+    "    # apply small positive shift to try and avoid dead ReLUs\n",
     "    biases = {\n",
-    "        'layer_1': tf.Variable(tf.zeros(6)),\n",
-    "        'layer_2': tf.Variable(tf.zeros(16)),\n",
-    "        'layer_3': tf.Variable(tf.zeros(120)),\n",
-    "        'layer_4': tf.Variable(tf.zeros(84)),\n",
-    "        'layer_5': tf.Variable(tf.zeros(n_classes))\n",
+    "        'layer_1': tf.Variable(tf.constant(0.1, shape=[6])),\n",
+    "        'layer_2': tf.Variable(tf.constant(0.1, shape=[16])),\n",
+    "        'layer_3': tf.Variable(tf.constant(0.1, shape=[120])),\n",
+    "        'layer_4': tf.Variable(tf.constant(0.1, shape=[84])),\n",
+    "        'layer_5': tf.Variable(tf.constant(0.1, shape=[n_classes]))\n",
     "    }\n",
     "    \n",
     "    # Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x6.\n",
@@ -454,12 +441,7 @@
     "    x = tf.nn.relu(x)\n",
     "\n",
     "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
-    "    x = tf.nn.max_pool(\n",
-    "        x,\n",
-    "        ksize = [1, 2, 2, 1],\n",
-    "        strides = [1, 2, 2, 1],\n",
-    "        padding = 'VALID'\n",
-    "    )\n",
+    "    x = tf.nn.max_pool(x, ksize = [1, 2, 2, 1], strides = [1, 2, 2, 1], padding = 'VALID')\n",
     "    \n",
     "    # Layer 2: Convolutional. Output = 10x10x16.\n",
     "    x = tf.nn.conv2d(x, weights['layer_2'],  strides=[1, 1, 1, 1], padding = 'VALID')\n",
@@ -481,12 +463,14 @@
     "    \n",
     "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
     "    x = tf.add(tf.matmul(x, weights['layer_3']), biases['layer_3'])\n",
+    "    x = tf.nn.dropout(x, dropout)\n",
     "    \n",
     "    # Activation.\n",
     "    x = tf.nn.relu(x)\n",
     "\n",
     "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
     "    x = tf.add(tf.matmul(x, weights['layer_4']), biases['layer_4'])\n",
+    "    x = tf.nn.dropout(x, dropout)\n",
     "    \n",
     "    # Activation.\n",
     "    x = tf.nn.relu(x)\n",
@@ -521,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +516,29 @@
     "\n",
     "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
     "y = tf.placeholder(tf.int32, (None))\n",
-    "one_hot_y = tf.one_hot(y, n_classes)"
+    "one_hot_y = tf.one_hot(y, n_classes)\n",
+    "keep_prob = tf.placeholder(tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hyper perameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "RATE = 0.001\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 256\n",
+    "TRAINING_DROPOUT = 0.8"
    ]
   },
   {
@@ -544,18 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "rate = 0.001\n",
-    "\n",
-    "logits = LeNet(x)\n",
+    "logits = LeNet(x, keep_prob)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y)\n",
     "loss_operation = tf.reduce_mean(cross_entropy)\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = RATE)\n",
     "training_operation = optimizer.minimize(loss_operation)"
    ]
   },
@@ -568,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -584,7 +588,7 @@
     "    sess = tf.get_default_session()\n",
     "    for offset in range(0, num_examples, BATCH_SIZE):\n",
     "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
-    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: 1.0})\n",
     "        total_accuracy += (accuracy * len(batch_x))\n",
     "    return total_accuracy / num_examples"
    ]
@@ -598,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +612,38 @@
      "output_type": "stream",
      "text": [
       "Training...\n",
-      "\n"
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.256\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.562\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.709\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.805\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.846\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.873\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.892\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.906\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.922\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.931\n",
+      "\n",
+      "Model saved\n"
      ]
     }
    ],
@@ -624,13 +659,13 @@
     "        for offset in range(0, num_examples, BATCH_SIZE):\n",
     "            end = offset + BATCH_SIZE\n",
     "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
-    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: TRAINING_DROPOUT})\n",
     "            \n",
     "        validation_accuracy = evaluate(X_validation, y_validation)\n",
     "        print(\"EPOCH {} ...\".format(i+1))\n",
     "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
     "        print()\n",
-    "        \n",
+    "    \n",
     "    saver.save(sess, \"tmp/model.ckpt\")\n",
     "    print(\"Model saved\")"
    ]
